# dls_backup_bl

./: .gitattributes  .gitignore  .gitremotes  CONTRIBUTING.rst  Dockerfile  Pipfile  README.rst  dls_backup  dls_backup_editor  dls_backup_gui.py  pyproject.toml  setup.cfg  setup.py  versions.txt
.devcontainer/: Dockerfile
.github/workflows/: code.yml  docs.yml  linkcheck.yml
0.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.1.1/.doctrees/: environment.pickle
0.1.1/_modules/: index.html
0.1.1/explanations/: todo.html
0.1.1/how-to/: todo.html
0.1.1/reference/: api.html  contributing.html
0.1.1/tutorials/: installation.html
0.1/.doctrees/: environment.pickle  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
0.1/_modules/: index.html
0.1/explanations/: todo.html
0.1/how-to/: todo.html
0.1/reference/: api.html  contributing.html
0.1/tutorials/: installation.html
dev/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
dls_backup_bl/: BL04I_Backup.json  BL04I_Backup.json.1  BL04I_Backup2.json  Backup.py  BackupEditor.py  Categories.py  Entries.py  __init__.py  backup.py  backupeditor.py  brick.py  categories.py  config.py  defaults.py  dls_backup_bl.code-workspace  dls_backup_bl.py  entries.py  importjson.py  report.py  repository.py  tserver.py  util.py  zebra.py
dls_backup_gui/: backupeditor.py  categories.py  dls_backup_gui.py  entries.py
docs/: reference.rst
master/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
test/: test_brick.json
tests/: test_dls_backup_bl.py
(+67 files in other folders)
