[metadata]
name = dls_backup_bl
version = file: dls_backup_bl/VERSION
# description = Module  # a short description of the module
author = 'Giles Knap',
author_email = 'giles.knap@diamond.ac.uk',
license = Apache License 2.0
long_description = file: README.rst

[options]
packages = dls_backup_bl
# install_requires = cothread
# If you want to include data files in packages,
# set this to True and include a MANIFEST.in file.
include_package_data = False

[options.package_data]
dls_backup_bl = VERSION

[options.entry_points]
console_scripts =
    dls-edit-backup.py = dls_backup_bl.backupeditor:main
    dls-backup-bl.py = dls_backup_bl.backup:main