[metadata]
name = dls_backup_bl
version = file: dls_backup_bl/VERSION
# description = Module  # a short description of the module
author = 'Giles Knap',
author_email = 'giles.knap@diamond.ac.uk',
license = Apache License 2.0
long_description = file: README.rst

[options]
packages = dls_backup_bl
install_requires =
    pyqt5
    pexpect
    dls-pmacanalyse>=2.0.0
    numpy
    cothread
    gitpython
    attrs>=19.1.0
include_package_data = False

[options.package_data]
dls_backup_bl = VERSION

[options.entry_points]
console_scripts =
    dls-backup-bl.py = dls_backup_bl.backup:main